objects/Credit_Notes__c/Credit_Notes__c.object-meta.xml
<CustomObject>
    <label>Credit Notes</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>