objects/Credit_Notes__c/fields/Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>Account_Ref__c</fullName>
    <description>This field pull through the values form Account</description>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Ref</label>
    <type>Text</type>
</CustomField>