objects/Credit_Notes__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <formula>IF(Text(Amount__c) &lt;&gt; NULL,&apos;- £&apos;&amp;Text(Amount__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <type>Text</type>
</CustomField>