objects/Credit_Notes__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Credit_Note_Line_Item__c.Total_price__c</summarizedField>
    <summaryForeignKey>Credit_Note_Line_Item__c.Credit_Notes__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>