objects/Credit_Notes__c/fields/Credit_Email_To__c.field-meta.xml
<CustomField>
    <fullName>Credit_Email_To__c</fullName>
    <label>Credit Email To</label>
    <type>Email</type>
</CustomField>