objects/Credit_Notes__c/fields/Credit_Note_Detail__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Detail__c</fullName>
    <label>Credit Note Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>