objects/Credit_Notes__c/fields/Credit_Note_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Email_Subject__c</fullName>
    <description>This Field has To be Referred Into the Email Template Subject</description>
    <formula>IF( OR( Account__r.Parent_SAGE_ID__c=&quot;PARK2005&quot;, Account__r.SAGE_Code__c = &quot;PARK2005&quot;) , Account__r.Name &amp;&quot; - Hentland Ltd Credit Note &quot;&amp; Credit_Note_Number__c , &quot;Hentland Ltd Credit Note &quot;&amp; Credit_Note_Number__c &amp;&quot; for &quot;&amp;Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Email Subject</label>
    <type>Text</type>
</CustomField>