objects/Credit_Notes__c/fields/Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Number__c</fullName>
    <label>Credit Note Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>