objects/Credit_Notes__c/fields/Credit_Note_PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_PDF_Name__c</fullName>
    <formula>&quot;Credit Note &quot;&amp;Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note PDF Name</label>
    <type>Text</type>
</CustomField>