objects/Credit_Notes__c/fields/Credit_Note_Total__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Total__c</fullName>
    <formula>Amount__c + VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>