objects/Credit_Notes__c/fields/Customer_site_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_site_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Notes (Customer/Site)</relationshipLabel>
    <relationshipName>Credit_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>