objects/Credit_Notes__c/fields/Email_for_Copy_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Copy_Credit_Note__c</fullName>
    <label>Email for Copy Credit Note</label>
    <type>Email</type>
</CustomField>