objects/Credit_Notes__c/fields/Invoice_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_No__c</fullName>
    <label>Invoice Reference No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>