objects/Credit_Notes__c/fields/Management_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Management_Approved_Rejected__c</fullName>
    <label>Management Approved/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>