objects/Credit_Notes__c/fields/Opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_name__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity name</label>
    <type>Text</type>
</CustomField>