objects/Credit_Notes__c/fields/Opportunity_Original_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Original_Recipient__c</fullName>
    <label>Opportunity Original Recipient</label>
    <type>Email</type>
</CustomField>