objects/Credit_Notes__c/fields/Priced__c.field-meta.xml
<CustomField>
    <fullName>Priced__c</fullName>
    <inlineHelpText>This field semi-auto populates - see the Description on this field. 
NOT PRICED = either a spreadsheet customer, or one not to be invoiced through Salesforce currently, or to be priced by Accounts. 
PRICED = prices are correct.</inlineHelpText>
    <label>Priced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHESTER TO PRICE</fullName>
            </value>
            <value>
                <fullName>NO INVOICE</fullName>
            </value>
            <value>
                <fullName>NOT PRICED</fullName>
            </value>
            <value>
                <fullName>PRICED</fullName>
            </value>
            <value>
                <fullName>RETURN TO SERVICE - mark as Priced, then change Service Approved to None</fullName>
            </value>
            <value>
                <fullName>SERVICE TO PRICE</fullName>
            </value>
            <value>
                <fullName>UPLOADED</fullName>
            </value>
            <value>
                <fullName>ZERO INVOICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>