objects/Credit_Notes__c/fields/Purchase_Order_Number2__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number2__c</fullName>
    <label>Purchase Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>