objects/Credit_Notes__c/fields/Reason_for_Credit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Credit__c</fullName>
    <label>Reason for Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aborted Visit</fullName>
            </value>
            <value>
                <fullName>All inclusive customer</fullName>
            </value>
            <value>
                <fullName>Extras Added Incorrectly</fullName>
            </value>
            <value>
                <fullName>Goods returned</fullName>
            </value>
            <value>
                <fullName>Goodwill gesture</fullName>
            </value>
            <value>
                <fullName>Incorrect / No Purchase Order</fullName>
            </value>
            <value>
                <fullName>Incorrect Pricing</fullName>
            </value>
            <value>
                <fullName>Invoice duplicated</fullName>
            </value>
            <value>
                <fullName>Sales Pricing Issue</fullName>
            </value>
            <value>
                <fullName>Site Contract Pricebook error</fullName>
            </value>
            <value>
                <fullName>Technician Error</fullName>
            </value>
            <value>
                <fullName>To be re-invoiced</fullName>
            </value>
            <value>
                <fullName>Unauthorised work</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>