objects/Credit_Notes__c/fields/Sage_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_Date__c</fullName>
    <label>Credit Note Date</label>
    <type>Date</type>
</CustomField>