objects/Credit_Notes__c/fields/Sage_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Invoice_Number__c</fullName>
    <label>Credit Note Sage Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>