objects/Credit_Notes__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TaxCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>