objects/Credit_Notes__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <label>Valuation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>